# Cardano.swift

./: .gitignore  Cardano.swift.podspec  Package.swift  README.md  TechnicalDesign.md
.github/workflows/: build.yml  deploy.yml
Sources/Blockfrost/: BlockfrostNetworkProvider.swift  NetworkApiInfo+Blockfrost.swift  Value+Blockfrost.swift
Sources/Cardano/: Keychain.swift  NetworkApiInfo.swift  NetworkProvider.swift  SignatureProvider.swift  SimpleAddressManager.swift
Sources/Cardano/Api/: CardanoSendApi.swift
Sources/Cardano/Extensions/: String+Cardano.swift
Sources/Core/: Account.swift  DataSignature.swift  PrivateKey.swift  ProtocolParamUpdate.swift  TransactionBody.swift  TransactionBuilder.swift  TransactionWitnessSet.swift  Utxo.swift  Value.swift
Sources/Core/Address/: Address.swift
Sources/Core/cml/: CmlTransaction.swift
Tests/BlockfrostTests/: AddressManagerTests.swift  CardanoSendApiTests.swift  MockProviders.swift  TestEnvironment.swift
Tests/CardanoTests/: AddressManagerTests.swift  CardanoSendApiTests.swift  CardanoTxApiTests.swift  MockProviders.swift  StringCardanoExtensionTests.swift
Tests/CoreTests/: CmlTransactionTests.swift  CoreTests.swift  FeesTests.swift  TransactionBuilderTests.swift
rust/: Cargo.toml  build.rs
rust/Validate/new/CCardano.xcframework/: Info.plist
rust/Validate/new/CCardano.xcframework/ios-arm64_x86_64-simulator/Headers/: module.modulemap
rust/patches/cardano-serialization-lib-10.2.0/: Cargo.toml
rust/patches/cardano-serialization-lib-10.2.0/src/: address.rs  lib.rs  metadata.rs  output_builder.rs  plutus.rs  serialization.rs  tx_builder.rs  tx_builder_constants.rs  utils.rs
rust/patches/cardano-serialization-lib-10.2.0/src/tx_builder/: tx_inputs_builder.rs
rust/scripts/: build_binary_macos.sh
rust/src/: array.rs  asset_name.rs  assets.rs  bip32_private_key.rs  bip32_public_key.rs  bootstrap_witness.rs  certificate.rs  constr_plutus_data.rs  data.rs  ed25519_signature.rs  error.rs  general_transaction_metadata.rs  genesis_key_delegation.rs  int.rs  json_value.rs  lib.rs  linear_fee.rs  metadata_list.rs  metadata_map.rs  move_instantaneous_rewards_cert.rs  multi_asset.rs  network_info.rs  option.rs  panic.rs  plutus_list.rs  plutus_map.rs  pool_registration.rs  pool_retirement.rs  private_key.rs  protocol_param_update.rs  ptr.rs  public_key.rs  stake_credential.rs  stake_delegation.rs  stake_deregistration.rs  stake_registration.rs  string.rs  transaction.rs  transaction_body.rs  transaction_builder.rs  (+11 more)
rust/src/address/: addr_type.rs  address.rs  base.rs  byron.rs  enterprise.rs  mod.rs  pointer.rs  reward.rs
rust/src/cml/: chain_helper.rs  mod.rs  transaction.rs  tx_input_details.rs
