[package]
name = "cardano-c-bindings"
version = "0.0.2"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Cardano bindings for C."
keywords = [ "Tesseract", "Cardano", "C" ]
edition = "2018"

build = "build.rs"

[dependencies]
#  cardano-serialization-lib = "10.2.0"
cardano-serialization-lib = { path="./patches/cardano-serialization-lib-10.2.0" }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
num-bigint = "0.4.0"
cardano-message-signing = "1.0.1"
getrandom = "0.2.14"
hex = "0.4.3"
cardano-multiplatform-lib = { version = "6.0.1" }
cml-core = "6.0.1"
cml-chain = "6.0.1"
cml-crypto = "6.0.1"
blockfrost = "1.0.1"
bech32 = "0.11.0"
blake2 = "0.10.6"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
anyhow = "1.0.83"
serde = "1.0.201"
env_logger = "0.11.3"
log = "0.4.21"


[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.12.4", features = ["json", "blocking", "native-tls-vendored"] }

# cbindgen = { version = "0.26.0", optional = true }

# [patch.crates-io]
# cardano-serialization-lib = { path="./target/patch/cardano-serialization-lib-10.2.0" }

[build-dependencies]
cbindgen = "0.27.0"

[lib]
name = "cardano"
path = "src/lib.rs"
crate-type = ["staticlib"]

# [[bin]]
# name = "force-build"
# path = "build.rs"

[profile.release]
strip = true
lto = true
